--- a/index.html
+++ b/index.html
@@ -4,11 +4,20 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>AluraBooks</title>
+        <link rel="stylesheet" href="reset.css">
         <link rel="stylesheet" href="style.css">
 
     </head>
 
     <body>
-        <h1>Alurabook</h1>
+      <header class="cabeçalho">
+        <span class="cabeçalho__menu-hamburguer">
+            <img src="img/Logo.svg" alt="Logo da AluraBooks">
+            <a href="#"><img src="img/Favoritos.svg" alt="meus Favoritos"></a>
+            <a href="#"><img src="img/Compras.svg" alt="sacola de compras"></a>
+            <a href="#"><img src="img/Usuário.svg" alt="meu perfil"></a>
+        </span>
+      </header>
     </body>
+
 </html>
