--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
 
     <body>
       <header class="cabeçalho">
-        <span class="cabeçalho__menu-hamburguer">
+        <span class="cabeçalho__menu-hamburguer"></span>
             <img src="img/Logo.svg" alt="Logo da AluraBooks">
             <a href="#"><img src="img/Favoritos.svg" alt="meus Favoritos"></a>
             <a href="#"><img src="img/Compras.svg" alt="sacola de compras"></a>
             <a href="#"><img src="img/Usuário.svg" alt="meu perfil"></a>
-        </span>
       </header>
     </body>
 
