--- a/index.html
+++ b/index.html
@@ -9,14 +9,24 @@
 
     </head>
 
-    <body>
+   <body>
       <header class="cabeçalho">
-        <span class="cabeçalho__menu-hamburguer"></span>
-            <img src="img/Logo.svg" alt="Logo da AluraBooks">
-            <a href="#"><img src="img/Favoritos.svg" alt="meus Favoritos"></a>
-            <a href="#"><img src="img/Compras.svg" alt="sacola de compras"></a>
-            <a href="#"><img src="img/Usuário.svg" alt="meu perfil"></a>
-      </header>
+       <div class="container"> 
+          <input type="checkbox" id="menu" class="container__botao">
+          <label for="menu">      
+            <span class="cabeçalho__menu-hamburguer container__imagem"></span>
+          </label> 
+          <ul class="lista-menu">
+              <li class="lista-menu__titulo"></li>
+          </ul>  
+          <img src="img/Logo.svg" alt="Logo da AluraBooks" class="container__imagem">
+        </div>  
+          <div class="container">
+            <a href="#"><img src="img/Favoritos.svg" alt="meus Favoritos" class="container__imagem"></a>
+            <a href="#"><img src="img/Compras.svg" alt="sacola de compras" class="container__imagem"></a>
+            <a href="#"><img src="img/Usuário.svg" alt="meu perfil" class="container__imagem"></a>
+          </div>    
+          </header>
     </body>
 
 </html>
